azureps-cmdlets-docs/ServiceManagement/Azure.RemoteApp/v1.6.1/Azure.RemoteApp.md
---
Module Name: Azure.RemoteApp
Module Guid: D48CF693-4125-4D2D-8790-1514F44CE325
Download Help Link: http://go.microsoft.com/fwlink/?linkid=390762
Help Version: 2.0.0.1
Locale: en-US
---

# Azure.RemoteApp Module
## Description
This topic displays help topics for the Azure RemoteApp Cmdlets.

## Azure.RemoteApp Cmdlets
### [Add-AzureRemoteAppUser](./Add-AzureRemoteAppUser.md)
Adds a user to an azure_2 RemoteApp collection.


### [Clear-AzureRemoteAppVmStaleAdObject](./Clear-AzureRemoteAppVmStaleAdObject.md)
Removes objects in azure_2 Active Directory that are associated with azure_2 RemoteApp virtual machines that no longer exist.


### [Copy-AzureRemoteAppUserDisk](./Copy-AzureRemoteAppUserDisk.md)
Copies the user disk of a user from one azure_2 RemoteApp collection to another.


### [Disconnect-AzureRemoteAppSession](./Disconnect-AzureRemoteAppSession.md)
Disconnects an azure_2 RemoteApp session.


### [Get-AzureRemoteAppCollectionUsageDetails](./Get-AzureRemoteAppCollectionUsageDetails.md)
Retrieves usage details for an azure_2 RemoteApp collection.


### [Get-AzureRemoteAppCollectionUsageSummary](./Get-AzureRemoteAppCollectionUsageSummary.md)
Retrieves a usage summary for an azure_2 RemoteApp collection.


### [Get-AzureRemoteAppCollection](./Get-AzureRemoteAppCollection.md)
Retrieves information about an azure_2 RemoteApp collection.


### [Get-AzureRemoteAppLocation](./Get-AzureRemoteAppLocation.md)
Lists the locations that azure_2 RemoteApp supports.


### [Get-AzureRemoteAppOperationResult](./Get-AzureRemoteAppOperationResult.md)
Retrieves the result of an azure_2 RemoteApp operation.


### [Get-AzureRemoteAppPlan](./Get-AzureRemoteAppPlan.md)
Lists azure_2 RemoteApp plans.


### [Get-AzureRemoteAppProgram](./Get-AzureRemoteAppProgram.md)
Retrieves the properties of one or more published azure_2 RemoteApp programs for a collection.


### [Get-AzureRemoteAppSession](./Get-AzureRemoteAppSession.md)
Lists all active and disconnected azure_2 RemoteApp sessions for a collection.


### [Get-AzureRemoteAppStartMenuProgram](./Get-AzureRemoteAppStartMenuProgram.md)
Lists the Start Menu programs in an azure_2 RemoteApp collection.


### [Get-AzureRemoteAppTemplateImage](./Get-AzureRemoteAppTemplateImage.md)
Retrieves information about azure_2 RemoteApp template images.


### [Get-AzureRemoteAppUser](./Get-AzureRemoteAppUser.md)
Lists the users in an azure_2 RemoteApp collection.


### [Get-AzureRemoteAppVmStaleAdObject](./Get-AzureRemoteAppVmStaleAdObject.md)
Gets objects in azure_2 Active Directory that are associated with azure_2 RemoteApp virtual machines that no longer exist.


### [Get-AzureRemoteAppVM](./Get-AzureRemoteAppVM.md)
Gets the virtual machines in an azure_2 RemoteApp collection.


### [Get-AzureRemoteAppVNet](./Get-AzureRemoteAppVNet.md)
Retrieves information about azure_2 RemoteApp virtual networks in azure_2.


### [Get-AzureRemoteAppVpnDeviceConfigScript](./Get-AzureRemoteAppVpnDeviceConfigScript.md)
Retrieves the configuration script for an azure_2 RemoteApp VPN device.


### [Get-AzureRemoteAppVpnDevice](./Get-AzureRemoteAppVpnDevice.md)
Retrieves information about a VPN device.


### [Get-AzureRemoteAppWorkspace](./Get-AzureRemoteAppWorkspace.md)
Retrieves information about an azure_2 RemoteApp workspace.


### [Invoke-AzureRemoteAppSessionLogoff](./Invoke-AzureRemoteAppSessionLogoff.md)
Logs off an azure_2 RemoteApp session immediately.


### [New-AzureRemoteAppCollection](./New-AzureRemoteAppCollection.md)
Creates an azure_2 RemoteApp collection.


### [New-AzureRemoteAppTemplateImage](./New-AzureRemoteAppTemplateImage.md)
Uploads or imports an azure_2 RemoteApp template image.


### [New-AzureRemoteAppVNet](./New-AzureRemoteAppVNet.md)
Creates an azure_2 RemoteApp virtual network.


### [Publish-AzureRemoteAppProgram](./Publish-AzureRemoteAppProgram.md)
Publishes an azure_2 RemoteApp program.


### [Remove-AzureRemoteAppCollection](./Remove-AzureRemoteAppCollection.md)
Removes an azure_2 RemoteApp collection.


### [Remove-AzureRemoteAppTemplateImage](./Remove-AzureRemoteAppTemplateImage.md)
Deletes an azure_2 RemoteApp template image.


### [Remove-AzureRemoteAppUserDisk](./Remove-AzureRemoteAppUserDisk.md)
Removes the user disk of a user from an azure_2 RemoteApp collection.


### [Remove-AzureRemoteAppUser](./Remove-AzureRemoteAppUser.md)
Removes a user from an azure_2 RemoteApp collection.


### [Remove-AzureRemoteAppVNet](./Remove-AzureRemoteAppVNet.md)
Deletes an azure_2 RemoteApp virtual network.


### [Rename-AzureRemoteAppTemplateImage](./Rename-AzureRemoteAppTemplateImage.md)
Renames an azure_2 RemoteApp template image.


### [Reset-AzureRemoteAppVpnSharedKey](./Reset-AzureRemoteAppVpnSharedKey.md)
Resets the azure_2 RemoteApp VPN shared key.


### [Restart-AzureRemoteAppVM](./Restart-AzureRemoteAppVM.md)
Restarts a virtual machine in an azure_2 RemoteApp collection.


### [Send-AzureRemoteAppSessionMessage](./Send-AzureRemoteAppSessionMessage.md)
Sends a message to a user.


### [Set-AzureRemoteAppCollection](./Set-AzureRemoteAppCollection.md)
Sets the properties of a RemoteApp collection.


### [Set-AzureRemoteAppVNet](./Set-AzureRemoteAppVNet.md)
Sets the properties of an azure_2 RemoteApp virtual network.


### [Set-AzureRemoteAppWorkspace](./Set-AzureRemoteAppWorkspace.md)
Sets the properties of an azure_2 RemoteApp workspace.


### [Unpublish-AzureRemoteAppProgram](./Unpublish-AzureRemoteAppProgram.md)
Unpublishes an azure_2 RemoteApp program.


### [Update-AzureRemoteAppCollection](./Update-AzureRemoteAppCollection.md)
Updates an azure_2 RemoteApp collection with a new template image.




