azureps-cmdlets-docs/ServiceManagement/Azure.RemoteApp/v3.0.0/Azure.RemoteApp.md
---
Module Name: Azure.RemoteApp
Module Guid: D48CF693-4125-4D2D-8790-1514F44CE325
Download Help Link: http://go.microsoft.com/fwlink/?linkid=390762
Help Version: 4.0.0.0
Locale: en-US
---

# Azure.RemoteApp Module
## Description
This topic displays help topics for the Azure RemoteApp Cmdlets.

The .dll file for this module is *Microsoft.WindowsAzure.Commands.RemoteApp.dll*.

## Azure.RemoteApp Cmdlets
### [Add-AzureRemoteAppUser](./Add-AzureRemoteAppUser.md)
Adds a user to an Azure RemoteApp collection.


### [Clear-AzureRemoteAppVmStaleAdObject](./Clear-AzureRemoteAppVmStaleAdObject.md)
Removes objects in Azure Active Directory that are associated with Azure RemoteApp virtual machines that no longer exist.


### [Copy-AzureRemoteAppUserDisk](./Copy-AzureRemoteAppUserDisk.md)
Copies the user disk of a user from one Azure RemoteApp collection to another.


### [Disconnect-AzureRemoteAppSession](./Disconnect-AzureRemoteAppSession.md)
Disconnects an Azure RemoteApp session.


### [Export-AzureRemoteAppTemplateImage](./Export-AzureRemoteAppTemplateImage.md)
Exports the template image of one Azure RemoteApp collection to the specified Azure storage account.


### [Export-AzureRemoteAppUserDisk](./Export-AzureRemoteAppUserDisk.md)
Exports all user disks from one Azure RemoteApp collection to the specified Azure storage account.


### [Get-AzureRemoteAppCollectionUsageDetails](./Get-AzureRemoteAppCollectionUsageDetails.md)
Retrieves usage details for an Azure RemoteApp collection.


### [Get-AzureRemoteAppCollectionUsageSummary](./Get-AzureRemoteAppCollectionUsageSummary.md)
Retrieves a usage summary for an Azure RemoteApp collection.


### [Get-AzureRemoteAppCollection](./Get-AzureRemoteAppCollection.md)
Retrieves information about an Azure RemoteApp collection.


### [Get-AzureRemoteAppLocation](./Get-AzureRemoteAppLocation.md)
Lists the locations that Azure RemoteApp supports.


### [Get-AzureRemoteAppOperationResult](./Get-AzureRemoteAppOperationResult.md)
Retrieves the result of an Azure RemoteApp operation.


### [Get-AzureRemoteAppPlan](./Get-AzureRemoteAppPlan.md)
Lists Azure RemoteApp plans.


### [Get-AzureRemoteAppProgram](./Get-AzureRemoteAppProgram.md)
Retrieves the properties of one or more published Azure RemoteApp programs for a collection.


### [Get-AzureRemoteAppSession](./Get-AzureRemoteAppSession.md)
Lists all active and disconnected Azure RemoteApp sessions for a collection.


### [Get-AzureRemoteAppStartMenuProgram](./Get-AzureRemoteAppStartMenuProgram.md)
Lists the Start Menu programs in an Azure RemoteApp collection.


### [Get-AzureRemoteAppTemplateImage](./Get-AzureRemoteAppTemplateImage.md)
Retrieves information about Azure RemoteApp template images.


### [Get-AzureRemoteAppUser](./Get-AzureRemoteAppUser.md)
Lists the users in an Azure RemoteApp collection.


### [Get-AzureRemoteAppVmStaleAdObject](./Get-AzureRemoteAppVmStaleAdObject.md)
Gets objects in Azure Active Directory that are associated with Azure RemoteApp virtual machines that no longer exist.


### [Get-AzureRemoteAppVM](./Get-AzureRemoteAppVM.md)
Gets the virtual machines in an Azure RemoteApp collection.


### [Get-AzureRemoteAppVNet](./Get-AzureRemoteAppVNet.md)
Retrieves information about Azure RemoteApp virtual networks in Azure.


### [Get-AzureRemoteAppVpnDeviceConfigScript](./Get-AzureRemoteAppVpnDeviceConfigScript.md)
Retrieves the configuration script for an Azure RemoteApp VPN device.


### [Get-AzureRemoteAppVpnDevice](./Get-AzureRemoteAppVpnDevice.md)
Retrieves information about a VPN device.


### [Get-AzureRemoteAppWorkspace](./Get-AzureRemoteAppWorkspace.md)
Retrieves information about an Azure RemoteApp workspace.


### [Invoke-AzureRemoteAppSessionLogoff](./Invoke-AzureRemoteAppSessionLogoff.md)
Logs off an Azure RemoteApp session immediately.


### [New-AzureRemoteAppCollection](./New-AzureRemoteAppCollection.md)
Creates an Azure RemoteApp collection.


### [New-AzureRemoteAppTemplateImage](./New-AzureRemoteAppTemplateImage.md)
Uploads or imports an Azure RemoteApp template image.


### [New-AzureRemoteAppVNet](./New-AzureRemoteAppVNet.md)
Creates an Azure RemoteApp virtual network.


### [Publish-AzureRemoteAppProgram](./Publish-AzureRemoteAppProgram.md)
Publishes an Azure RemoteApp program.


### [Remove-AzureRemoteAppCollection](./Remove-AzureRemoteAppCollection.md)
Removes an Azure RemoteApp collection.


### [Remove-AzureRemoteAppTemplateImage](./Remove-AzureRemoteAppTemplateImage.md)
Deletes an Azure RemoteApp template image.


### [Remove-AzureRemoteAppUserDisk](./Remove-AzureRemoteAppUserDisk.md)
Removes the user disk of a user from an Azure RemoteApp collection.


### [Remove-AzureRemoteAppUser](./Remove-AzureRemoteAppUser.md)
Removes a user from an Azure RemoteApp collection.


### [Remove-AzureRemoteAppVNet](./Remove-AzureRemoteAppVNet.md)
Deletes an Azure RemoteApp virtual network.


### [Rename-AzureRemoteAppTemplateImage](./Rename-AzureRemoteAppTemplateImage.md)
Renames an Azure RemoteApp template image.


### [Reset-AzureRemoteAppVpnSharedKey](./Reset-AzureRemoteAppVpnSharedKey.md)
Resets the Azure RemoteApp VPN shared key.


### [Restart-AzureRemoteAppVM](./Restart-AzureRemoteAppVM.md)
Restarts a virtual machine in an Azure RemoteApp collection.


### [Send-AzureRemoteAppSessionMessage](./Send-AzureRemoteAppSessionMessage.md)
Sends a message to a user.


### [Set-AzureRemoteAppCollection](./Set-AzureRemoteAppCollection.md)
Sets the properties of a RemoteApp collection.


### [Set-AzureRemoteAppVNet](./Set-AzureRemoteAppVNet.md)
Sets the properties of an Azure RemoteApp virtual network.


### [Set-AzureRemoteAppWorkspace](./Set-AzureRemoteAppWorkspace.md)
Sets the properties of an Azure RemoteApp workspace.


### [Unpublish-AzureRemoteAppProgram](./Unpublish-AzureRemoteAppProgram.md)
Unpublishes an Azure RemoteApp program.


### [Update-AzureRemoteAppCollection](./Update-AzureRemoteAppCollection.md)
Updates an Azure RemoteApp collection with a new template image.



